force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>