force-app/main/default/objects/Staff__c/fields/Adjusted_Current_Weight_User__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Current_Weight_User__c</fullName>
    <formula>If(NOT(ISBLANK(Override_Current_Weight_User__c)), Override_Current_Weight_User__c,Current_Weighting__c)</formula>
    <label>Adjusted Current Weight – User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>