force-app/main/default/objects/Staff__c/fields/Capacity_based_on_CM_BOB_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Capacity_based_on_CM_BOB_Weighting__c</fullName>
    <formula>IF(OR(ISPICKVAL(Primary_Role__c , &apos;Client Manager&apos;),
ISPICKVAL(Primary_Role__c , &apos;Benefit Consultant&apos;),
ISPICKVAL(Primary_Role__c , &apos;UMR Client&apos;),
ISPICKVAL(Primary_Role__c , &apos;Surest Client Manager&apos;)),

IF(ISNULL(Override_Current_Weight_User__c),
IF(NOT(ISNULL(Current_Weighting__c)),Current_Weighting__c - CM_BOB_Weighting__c,0-CM_BOB_Weighting__c),
Override_Current_Weight_User__c - CM_BOB_Weighting__c),

IF( ISPICKVAL(Primary_Role__c, &apos;Client Management Consultant&apos;),
IF(ISNULL(CMC_Override_Current_Weight__c),
IF(NOT(ISNULL(CMC_Current_Weight__c)),CMC_Current_Weight__c - CM_BOB_Weighting__c, 0-CM_BOB_Weighting__c),
CMC_Override_Current_Weight__c - CM_BOB_Weighting__c),

		
IF( ISPICKVAL(Primary_Role__c, &apos;Specialty Benefits Client Manager&apos;),
IF(ISNULL(SBC_Override_Current_Weighting__c),
IF(NOT(ISNULL(SBC_Current_Weighting__c)),SBC_Current_Weighting__c - CM_BOB_Weighting__c, 0-CM_BOB_Weighting__c),
SBC_Override_Current_Weighting__c - CM_BOB_Weighting__c),0)))</formula>
    <label>Capacity based on  BOB Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>