force-app/main/default/objects/Staff__c/fields/CM_BOB_Weighting_Outlier__c.field-meta.xml
<CustomField>
    <fullName>CM_BOB_Weighting_Outlier__c</fullName>
    <label>BOB Weighting Outlier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>