force-app/main/default/objects/Staff__c/fields/CM_Bom_Weight__c.field-meta.xml
<CustomField>
    <fullName>CM_Bom_Weight__c</fullName>
    <formula>Staff_Name__r.Current_Weighting1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM BOM Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>