force-app/main/default/objects/Staff__c/fields/CMC_Current_Weight__c.field-meta.xml
<CustomField>
    <fullName>CMC_Current_Weight__c</fullName>
    <formula>Staff_Name__r.CMC_Weighting__c</formula>
    <label>CMC Current Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>