force-app/main/default/objects/Staff__c/fields/CMC_Override_Current_Weight__c.field-meta.xml
<CustomField>
    <fullName>CMC_Override_Current_Weight__c</fullName>
    <label>CMC Override Current Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>