force-app/main/default/objects/Staff__c/fields/Current_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Current_Weighting__c</fullName>
    <formula>Staff_Name__r.Current_Weighting1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>