force-app/main/default/objects/Staff__c/fields/Director_Notes_on_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Director_Notes_on_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Director Notes on Capacity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>