force-app/main/default/objects/Staff__c/fields/IPM_BOB_Case_FTE__c.field-meta.xml
<CustomField>
    <fullName>IPM_BOB_Case_FTE__c</fullName>
    <label>IPM BOB Case FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>