force-app/main/default/objects/Staff__c/fields/IPM_Weighting__c.field-meta.xml
<CustomField>
    <fullName>IPM_Weighting__c</fullName>
    <formula>Staff_Name__r.IPM_Weighting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPM - Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>