force-app/main/default/objects/Staff__c/fields/IPM_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>IPM_Years_of_Experience__c</fullName>
    <formula>Staff_Name__r.Years_of_Experience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPM - Years of Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>