force-app/main/default/objects/Staff__c/fields/IPM_Years_of_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>IPM_Years_of_Experience_Score__c</fullName>
    <formula>IF(ISNULL(Override_IPM_Weighting__c), 				
Staff_Name__r.IPM_Weighting__c * Hours_Of_Complexity_Backend__c , Override_IPM_Weighting__c*Hours_Of_Complexity_Backend__c)</formula>
    <label>IPM - Years of Experience Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>