force-app/main/default/objects/Staff__c/fields/Override_Current_Weight_User__c.field-meta.xml
<CustomField>
    <fullName>Override_Current_Weight_User__c</fullName>
    <label>Override Current Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>