force-app/main/default/objects/Staff__c/fields/Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Role__c</fullName>
    <label>Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Manager</fullName>
            </value>
            <value>
                <fullName>Benefit Consultant</fullName>
            </value>
            <value>
                <fullName>Client Management Consultant</fullName>
            </value>
            <value>
                <fullName>UMR Client</fullName>
                <label>UMR Client Manager</label>
            </value>
            <value>
                <fullName>Implementation Project Manager</fullName>
            </value>
            <value>
                <fullName>Surest Client Manager</fullName>
            </value>
            <value>
                <fullName>Surest Implementation Project Manager</fullName>
            </value>
            <value>
                <fullName>Specialty Benefits Client Manager</fullName>
            </value>
            <value>
                <fullName>IPM</fullName>
                <isActive>false</isActive>
                <label>IPM</label>
            </value>
            <value>
                <fullName>Specialty Benefits Consultant</fullName>
                <isActive>false</isActive>
                <label>Specialty Benefits Consultant</label>
            </value>
            <value>
                <fullName>Surest</fullName>
                <isActive>false</isActive>
                <label>Surest</label>
            </value>
            <value>
                <fullName>Surest Account Associate</fullName>
                <isActive>false</isActive>
                <label>Surest Account Associate</label>
            </value>
            <value>
                <fullName>Surest Project Implementation Manager</fullName>
                <isActive>false</isActive>
                <label>Surest Project Implementation Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>