force-app/main/default/objects/Staff__c/fields/Required_VS_Actual_current__c.field-meta.xml
<CustomField>
    <fullName>Required_VS_Actual_current__c</fullName>
    <label>Required VS Actual (current)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>