force-app/main/default/objects/Staff__c/fields/SBC_Current_Weighting__c.field-meta.xml
<CustomField>
    <fullName>SBC_Current_Weighting__c</fullName>
    <formula>Staff_Name__r.SBC_Current_Weighting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBC Current Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>