force-app/main/default/objects/Staff__c/fields/SBC_Override_Current_Weighting__c.field-meta.xml
<CustomField>
    <fullName>SBC_Override_Current_Weighting__c</fullName>
    <label>SBC Override Current Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>