force-app/main/default/objects/Staff__c/fields/staff_assignment_name__c.field-meta.xml
<CustomField>
    <fullName>staff_assignment_name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Staff_Name__r.Id, Staff_Name__r.LastName +&apos; &apos;+ Staff_Name__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>staff assignment name</label>
    <type>Text</type>
</CustomField>