force-app/main/default/objects/Staff__c/fields/Staff_Comments__c.field-meta.xml
<CustomField>
    <fullName>Staff_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Staff Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>