force-app/main/default/objects/Staff__c/fields/Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Staff_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staffing_Model</relationshipName>
    <type>Lookup</type>
</CustomField>