force-app/main/default/objects/Staff__c/fields/UpdateFieldFromStaffAssignment__c.field-meta.xml
<CustomField>
    <fullName>UpdateFieldFromStaffAssignment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UpdateFieldFromStaffAssignment</label>
    <type>Date</type>
</CustomField>