force-app/main/default/objects/Staff__c/fields/Weighted_FTES_per_Staff_Model__c.field-meta.xml
<CustomField>
    <fullName>Weighted_FTES_per_Staff_Model__c</fullName>
    <label># Weighted FTES per Staff Model</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>