force-app/main/default/objects/Staff__c/recordTypes/CSI_Staff.recordType-meta.xml
<RecordType>
    <fullName>CSI_Staff</fullName>
    <active>true</active>
    <label>CSI Staff</label>
</RecordType>