force-app/main/default/objects/Staff__c/recordTypes/IPM_Staff.recordType-meta.xml
<RecordType>
    <fullName>IPM_Staff</fullName>
    <active>true</active>
    <label>IPM Staff</label>
</RecordType>