force-app/main/default/objects/Staff__c/listViews/Active_IPM_Staff.listView-meta.xml
<ListView>
    <fullName>Active_IPM_Staff</fullName>
    <columns>NAME</columns>
    <columns>Staff_Name__c</columns>
    <columns>Primary_Role__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CM_BOB_Weighting__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Term_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Staff__c.IPM_Staff</value>
    </filters>
    <label>Active IPM Staff</label>
</ListView>